--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Assets/Scripts/ActionBasedControllerManager.cs" />
     <Compile Include="Assets/Scripts/AvatarInputConverter.cs" />
+    <Compile Include="Assets/Scripts/UI_InteractionController.cs" />
+    <Compile Include="Assets/Scripts/ButtonInteraction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/IRONHEAD Games/TextMesh Pro/Resources/Shaders/TMPro.cginc" />
